--- a/public/sass/footer.scss
+++ b/public/sass/footer.scss
@@ -2,25 +2,39 @@
 @import "_colors";
 .footer {
   background-color: #ebebeb;
-  margin-top: 25px;
+  background-image: linear-gradient(to bottom, #f3f3f3 3px, #ebebeb 10px);
+
+  border-top: 1px solid #e9e9e9;
+  margin-top: 15px;
   padding: 20px 0;
 
   &__nav {
-    .main-menu {
+    margin-left: -10px;
+    .main-menu, .main-menu-item {
       font: 12px "Soho Gothic Pro";
       font-weight: 400;
+    }
+    .main-menu-item {
+      padding: 5px 10px;
+      &--active {
+        background-color: $main_menu_active_bg_color;
+        padding: 5px 7px;
+      }
     }
   }
   &__copyright {
     font: 12px "Soho Gothic Pro Light";
     color: #5a5a59;
+    white-space: nowrap;
   }
   &__social {
-    margin-top: 20px;
+    margin-left: -10px;
+    margin-top: 10px;
   }
 }
 
 .social-link {
   display: inline-block;
   height: 33px;
+  margin-right: 10px;
 }
