--- a/public/sass/page.scss
+++ b/public/sass/page.scss
@@ -22,7 +22,7 @@ a {
 .page-paragraph {
   font: 15px "Tahoma";
   font-weight: 400;
-  margin: 15px 0;
+  margin: 12px 0;
   line-height: 120%;
   color: #333;
 }
@@ -30,23 +30,27 @@ a {
   @extend .page-paragraph;
   font: 16.59px "Soho Gothic Pro Medium";
   text-align: center;
-  padding: 25px 25px;
+
+  padding: 1px 25px 1px 20px;
+  margin: 30px 0;
+
   color: #333;
 }
 .page-callout {
   margin: 0 35px;
   border-radius: 3px;
-  padding: 20px;
-  margin: 15px 0;
+  padding: 15px 30px;
   background-color: #4e97c9;
-  font: 16.59px "Soho Gothic Pro Medium";
+  font: 17px "Soho Gothic Pro Medium";
+  line-height: 160%;
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.45);
   text-align: center;
 }
 .page-phone-number {
   text-decoration: none;
-  font: 16.59px "Soho Gothic Pro Medium";
+  font: 17px "Soho Gothic Pro Medium";
+  line-height: 160%;
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.45);
   padding: 0 5px;
@@ -62,7 +66,7 @@ a {
 
 .page-container {
   margin: 0 auto;
-  width: 916px;
+  width: 925px;
   padding: 0 30px;
 
   @media screen and (max-width: 984px) {
