--- a/public/css/style.css
+++ b/public/css/style.css
@@ -789,7 +789,8 @@ a {
 .page-container {
   margin: 0 auto;
   width: 925px;
-  padding: 0 30px; }
+  padding: 0 30px;
+  box-sizing: border-box; }
   @media screen and (max-width: 984px) {
     .page-container {
       width: 900px; } }
