--- a/public/css/style.css
+++ b/public/css/style.css
@@ -730,7 +730,7 @@ a {
   color: #468fc5; }
 
 .page {
-  padding: 30px 0;
+  padding: 30px 0 0 0;
   background-color: #fff;
   font-family: "Soho Gothic Pro";
   font-size: 15px; }
@@ -762,6 +762,7 @@ a {
 
 .page-phone-number {
   text-decoration: none;
+  white-space: nowrap;
   font: 17px "Soho Gothic Pro Medium";
   line-height: 160%;
   color: #fff;
