--- a/public/sass/page.scss
+++ b/public/sass/page.scss
@@ -46,6 +46,12 @@ a {
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.45);
   text-align: center;
+
+  @include responsive(320) {
+    font: 14px "Soho Gothic Pro", Arial, sens-serif;
+    margin: 0 10px;
+    padding: 10px 20px;
+  }
 }
 .page-phone-number {
   text-decoration: none;
