--- a/public/sass/page.scss
+++ b/public/sass/page.scss
@@ -54,6 +54,7 @@ a {
   }
 }
 .page-phone-number {
+  display: inline-block;
   text-decoration: none;
   white-space: nowrap;
   font: 17px "Soho Gothic Pro Medium";
