--- a/public/css/style.css
+++ b/public/css/style.css
@@ -774,6 +774,7 @@ a {
     padding: 10px 20px; }
 
 .page-phone-number {
+  display: inline-block;
   text-decoration: none;
   white-space: nowrap;
   font: 17px "Soho Gothic Pro Medium";
